===========================================================================
2013-03-19      version 0.18.5
===========================================================================
2013-03-19:	James Osborn
	Added *_ZERO initializers for many structures.

2013-03-02:	James Osborn
	Fixed crash in staples deriv.

2013-02-21:	James Osborn
	Added generic staples routine and derivative.

2013-02-07:	James Osborn
	Some fixes to asqtad routines.

2013-01-10:	James Osborn
	Fixed fat7 derivative routine.

===========================================================================
2012-12-19      version 0.18.4
===========================================================================
2012-12-19:	James Osborn
	Added Nc='N' color versions of routines.

===========================================================================
2012-12-03      version 0.18.3
===========================================================================
2012-12-03:	James Osborn
	Exposed fat7 smearing and other small changes.

===========================================================================
2012-11-21      version 0.18.2
===========================================================================
2012-11-21:	Carleton DeTar
        Added Oktay-Kronfeld (OK) Wilson-type action (IFLA) from Bugra Oktay
        Removed inconsistent code and declarations from wilson_invert.c.

===========================================================================
2012-11-01      version 0.18.1
===========================================================================
2012-11-01:	James Osborn
	Started gauge smearing/force infrastructure.

===========================================================================
2012-08-13      version 0.18.0
===========================================================================
2012-08-13:	James Osborn
	Changed build structure and added Nc=2 routines.

===========================================================================
2012-04-11      version 0.17.7