@@ -1,3 +1,6 @@
+2013-03-22:	James Osborn
+	Added adjoint plaquette to gauge action.
+
 ===========================================================================
 2013-03-19      version 0.18.5
 ===========================================================================
